--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
@@ -1,6 +1,6 @@
 @article{PhysRev.149.674,
   title = {Theory of the Third-Order Elastic Constants of Diamond-Like Crystals},
-  author = {Keating, P.},
+  author = {Keating, P. N.},
   journal = {Phys. Rev.},
   volume = {149},
   issue = {2},
