1. History of tags fixed. 2. inactive history icon fixed. 3. nullpointer exeption on history page fixed. 4. feedbacks on improving history page are applied.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -806,12 +806,13 @@ hidtory.option3				= Added characters to a field (green background)
 hidtory.option4				= Removed characters from a field (red background)
 History.empty				= This post has not been edited yet. 
 history.restore.confirm		= Do you really want to restore the selected fields?
-history.selection.help		= Select a revision and see the differences to this revision.
-history.restoreBtn.disabled = restore button is only enabled when you are comparing a revision to the current post.
+history.selection.help		= Select a revision and see the differences to this revision. (If you select 'current version', you will have an option to restore the current post to this version.)
+history.restoreBtn.disabled = restore button is only enabled when you are comparing a revision to the current post.  
 history.restoreBtn.enabled	= restore to this version
 history.historyList.header	= The following revisions are available for this post:
 history.historySelect.compareTo	= Compare to
 history.currentVersion		= This version is identical to the latest(current) version.
+history.identicalToPreVersion = This version is identical to the previous version.
 history.firstVersion		= This is the first version and has no previous version.  
 
 
