small text changes

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -386,7 +386,7 @@ didyouknow.isbn            = Um ein Buch, eine Zeitschrift oder ein Magazin in I
 didyouknow.scanningQr      = <p>Ihre Webcam kann die Barcodes Ihrer B\u00FCcher lesen!</p><p>Die Option 'Code scannen' auf der Seite 'Publikation eintragen' \u00F6ffnet dazu ein Plugin, das den Code scannt. Als Ergebnis bekommen Sie ein vorausgef\u00FClltes Formular mit allen verf\u00FCgbaren Metadaten zum Buch.</p><p>{0} kann zudem Ihren hochgeladenen Dokumenten QR-Codes hinzuf\u00FCgen. Diese werden an einem wei\u00DFen Fleck auf der ersten Seite des Dokuments eingef\u00FCgt. Wenn Sie das Dokument mit dem QR-Code drucken, k\u00F6nnen Sie genau dieses Dokument sp\u00E4ter durch Scannen des Dokuments leicht finden und zitieren.</p>
 
 discussion.bookmarkReferences = Bookmarks
-discussion.byGroup            = Zeige von {0} diskutierte Eintr\u00E4ge
+discussion.byGroup            = Zeige k\u00FCrzlich diskutierte Eintr\u00E4ge von {0}
 discussion.byGroup.help       = Zeige Lesezeichen und Publikationen, die von Mitgliedern bewertet oder kommentiert wurden
 discussion.byUser             = Zeige von {0} diskutierte Eintr\u00E4ge
 discussion.byUser.help        = Zeige Lesezeichen und Publikationen, die von {0} bewertet oder kommentiert wurden
