--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -395,7 +395,7 @@ didyouknow.isbn            = In order to save a book, a journal, or a magazine i
 didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option 'scan code' on the 'post publication' page {0} opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p> 
 
 discussion.bookmarkReferences = Bookmarks
-discussion.byGroup            = show posts recently discussed by {0}
+discussion.byGroup            = show posts recently discussed by members of {0}
 discussion.byGroup.help       = show bookmarks and publications recently commented or reviewed by members
 discussion.byUser             = show posts recently discussed by {0}
 discussion.byUser.help        = show bookmarks and publications recently commented or reviewed by {0}
