added some german messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -69,7 +69,7 @@ basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
-batchedit.EditAllTag               = Add a tag to all the selected posts
+batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
 batchedit.Selection.addToAll       = Add a tag (s) to all posts
 batchedit.Selection.addToEach      = Update tag (s) of each post
@@ -90,7 +90,7 @@ batchedit.editHint                 = Info: To enable edit options, select an act
 batchedit.info1                    = Here you can edit your posts. Edit options include
 batchedit.info2                    = To start editing, select at least one post and then select desired editing option. 
 batchedit.noPost.message           = There is no post to edit!
-batchedit.normalizeAlert           = Info: You are about to normalize BibTex Key of the selected posts!
+batchedit.normalizeAlert           = Info: You are about to normalize BibTex key of the selected posts! The BibTex key of a post is normalized to the pattern <tt>nameYearTitle</tt>, where <tt>name</tt> is the last name of the first author, <tt>year</tt> is the publication year, and <tt>title</tt> is the first word of the title that has at least five letters, e.g. <tt>knuth1998programming</tt>.
 batchedit.normalizeSelected        = Normalize BibTex Key
 batchedit.notYours                 = The following posts do not belong to your collection. You can only edit your own posts.
 batchedit.option1                  = Normalizing BibTex key
@@ -99,7 +99,7 @@ batchedit.option3                  = Deleting post(s)
 batchedit.option4                  = Editing tags of each post
 batchedit.option5                  = Adding tag(s) to several posts
 batchedit.selectAll                = Select all posts
-batchedit.selectedTags             = Add these tags to ALL SELECTED posts.
+batchedit.selectedTags             = Add these tags to all selected posts.
 batchedit.selection                = Select
 batchedit.selection.help           = Select an edit option
 batchedit.selection.initial        = Please select action...
