--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -58,8 +58,12 @@ basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
 batchedit = 
 
+batchedit.AllpostTagsHeader      = Diese Tags werden zu 
+batchedit.EditAllTag             = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
+batchedit.EditEachTag            = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
 batchedit.addTags                = Tags hinzuf\u00FCgen
 batchedit.button.update          = Absenden
+batchedit.deleteAlert            = Warnung: Sie l\u00F6schen alle ausgew\u00E4hlten Eintr\u00E4ge!
 batchedit.deleteSelected         = Eintr\u00E4ge l\u00F6schen
 batchedit.deleteSelected.confirm = Wollen Sie wirklich alle ausgew\u00E4hlten Eintr\u00E4ge l\u00F6schen?
 batchedit.disregardedPosts       = Ignorierte Eintr\u00E4ge
@@ -69,13 +73,15 @@ batchedit.ignoreSelected         = Eintr\u00E4ge ignorieren
 batchedit.ignoreSelected.confirm = Sollen wirklich alle ausgew\u00E4hlten Eintr\u00E4ge ignoriert werden?
 # batchedit Seite(n)
 batchedit.info                   = Hier k\u00F6nnen Sie Ihre Eintr\u00E4ge bearbeiten
+batchedit.normalizeAlert         = \ Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
 batchedit.normalizeSelected      = BibTeX-Schl\u00FCssel normalisieren
 batchedit.selectAll              = Alles ausw\u00E4hlen
-batchedit.selectedTags           = F\u00FCge diese Tags <strong>ALLEN AUSGEW\u00C4HLTEN</strong> Eintr\u00E4gen hinzu.
+batchedit.selectedTags           = Diese Tags den ausgew\u00E4hlten Eintr\u00E4gen hinzuf\u00FCgen.
 batchedit.selection              = Auswahl
-batchedit.selection.help         = Diese Auswahlbox erm\u00F6glicht Ihnen Operationen auf alle ausgew\u00E4hlten Eintr\u00E4ge anzuwenden. BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJAHRTitle</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>JAHR</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
+batchedit.selection.help         = W\u00E4hlen Sie eine Option zum Bearbeiten der Eintr\u00E4ge.
 batchedit.selection.initial      = Bitte Aktion ausw\u00E4hlen...
 batchedit.title                  = Batch edit
+batchedit.updatePrivacy          = Sichtbarkeit einstellen
 batchedit.updateSelected         = Tags aktualisieren
 batchedit.viewable               = Sichtbarkeit setzen
 batchedit.yourPosts              = Ihre Eintr\u00E4ge
