hints added to snippet batch edit.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -110,6 +110,8 @@ batchedit.updateSelected           = update tags
 batchedit.viewable                 = Update privacy (Viewable for:)
 batchedit.yourPosts                = short description
 batchedit.yourTags                 = Your posts' tags
+batchedit.hint.savedEdit		   = The following (non-erroneous) post(s) are saved. You can now edit them.
+batchedit.hint.notSavedEdit		   = The following (non-erroneous) post(s) are not saved yet. They will be saved after you finish editing them.
 
 bibtex.abstract                              = abstract
 bibtex.abstract.cap                          = Abstract
