group invite mail

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -734,7 +734,7 @@ friends.yourfriends          = your friends are
 gettingStarted = getting started
 
 gettingStarted.cite                  = {0} helps you create bibligraphies for scientific papers. If you use a specific tag for each bibliography and assign it to all your paper posts accordingly, you can use the tag to find all papers of the bibliography. Afterwards, you can export your publication list in the desired format. {0} supports <a href="/export">a lot of formats</a>, e.&nbsp;g. Microsoft Word Reference Manager, EndNote, and BibTeX.
-gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200B\u200Bvisible to other group members.</p>
+gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200b\u200bvisible to other group members.</p>
 gettingStarted.collect               = <p>Using {0} you can easily create collections of bookmark and publication posts. Just insert <a href="/postBookmark">bookmarks</a> and <a href="/postPublication">publications</a>. You can do this even faster with our {0} <a href="/buttons">browser add-ons or bookmarklets</a>.</p><p>In addition, you can also use <a href="/postPublication?selTab=3#selTab3">ISBN, ISSN, DOI</a>, or <a href="/postPublication?selTab=4#selTab4">barcodes</a> to have the insert publication form filled up automatically for you.</p><p>Use tags to organize the posts in your collection. If you choose them carefully, tags are a very powerful instrument. <a href="/help_en/How-to%20use%20TAGs">Learn more about tagging</a> in {0}.</p>
 gettingStarted.discover              = <p>Discover new interesting publications for your scientific activities. The fulltext search of {0} helps you doing so. Beyond that, you can use the search field to filter your post lists by tags, authors and users.</p>\n\n<p>Be inspired by the tag clouds. Click on interesting tags, to filter the post lists for special topics. This way, you can browse through topics easily and find related contents by concept.</p>
 gettingStarted.headline              = Getting started with {0}
@@ -923,9 +923,11 @@ login.title                   = Login
 login.withOpenID              = Login with your OpenID
 login.withUsernameAndPassword = Login with username and password
 
-mail.activation.body                 = \nWelcome to {1}! Your account activation was successful.\n\nYour username is {0}\nYour {1} home page is {2}user/{0}\n\nHave a look at the help page and the FAQ:\n{2}help\n{2}help/faq\n\nNews regarding {1} can be found in our blog:\n{3}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
+mail.activation.body                 = \nWelcome to {1}! Your account activation was successful.\n\nYour username is {0}\nYour {1} home page is {5}\n\nHave a look at the help page and the FAQ:\n{2}help\n{2}help/faq\n\nNews regarding {1} can be found in our blog:\n{3}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
 mail.activation.subject              = Your {1} activation was successful!
-mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has send a request to join your group.\n\nReason: {2}\n\nVisit {3}settings?requGroup={4}&user={5}&selTab=3\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
+mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {3}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
+mail.groupInvite.subject             = Group invitation to {2}
+mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has sent a request to join your group.\n\nReason: {2}\n\nVisit {3}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.body    = \nHello {1}\n\nYour request to join group {0} has been denied.\n\nReason: {2}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.subject = Your join request for group {0}
 mail.joinGroupRequest.subject        = User join request for {0}
@@ -937,7 +939,7 @@ mail.registration.subject            = Your {1} Registration
 
 members = members
 
-meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00FCrzburg and L3S Research Center, Hannover (Germany)
+meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00fcrzburg and L3S Research Center, Hannover (Germany)
 meta.copyright   = KDE/DMIR/L3S, Germany
 meta.description = The blue social bookmark and publication sharing system.
 meta.keywords    = collaborative tagging, publication management, BibTeX, bookmarks, folksonomy, knowledge management
@@ -1833,7 +1835,7 @@ settings.overwrite.help.browser                  = browser bookmarks overwrite b
 settings.overwrite.help.delicious                = Delicious bookmarks overwrite bookmarks to the same URL in your collection
 settings.password.change.current.error           = Your current password is incorrect.
 settings.password.change.new.error               = Please confirm your new password.
-settings.password.change.success                 = Your password was changed successfully\u044E
+settings.password.change.success                 = Your password was changed successfully\u044e
 settings.password.help.delicious                 = your Delicious password
 settings.passwordwithoutspaces                   = (required :: without spaces)
 settings.picture.current                         = current picture
@@ -2004,7 +2006,7 @@ system.desc                              = The blue social bookmark and publicat
 system.groups                            = You can create a new group within your account settings under the group tab.\r\nA group allows you to get an aggregated view of its member's posts as well as to make some of your own make visible only to its members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
-system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
+system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00fcrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
 system.recent                            = Here you see the latest posts:
 system.recentlyDiscussed.intro.help      = See our help sections on <a href='/help_en/Discussion%20Reviews%20and%20Comments'>discussions</a> and <a href='/help_en/Discussed%20Posts'>discussed post pages</a> to learn more about reviews and comments.
 system.recentlyDiscussed.intro.noUser    = Bookmarks and publications that were recently reviewed or commented.
