--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -734,7 +734,7 @@ friends.yourfriends          = your friends are
 gettingStarted = getting started
 
 gettingStarted.cite                  = {0} helps you create bibligraphies for scientific papers. If you use a specific tag for each bibliography and assign it to all your paper posts accordingly, you can use the tag to find all papers of the bibliography. Afterwards, you can export your publication list in the desired format. {0} supports <a href="/export">a lot of formats</a>, e.&nbsp;g. Microsoft Word Reference Manager, EndNote, and BibTeX.
-gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200b\u200bvisible to other group members.</p>
+gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200B\u200Bvisible to other group members.</p>
 gettingStarted.collect               = <p>Using {0} you can easily create collections of bookmark and publication posts. Just insert <a href="/postBookmark">bookmarks</a> and <a href="/postPublication">publications</a>. You can do this even faster with our {0} <a href="/buttons">browser add-ons or bookmarklets</a>.</p><p>In addition, you can also use <a href="/postPublication?selTab=3#selTab3">ISBN, ISSN, DOI</a>, or <a href="/postPublication?selTab=4#selTab4">barcodes</a> to have the insert publication form filled up automatically for you.</p><p>Use tags to organize the posts in your collection. If you choose them carefully, tags are a very powerful instrument. <a href="/help_en/How-to%20use%20TAGs">Learn more about tagging</a> in {0}.</p>
 gettingStarted.discover              = <p>Discover new interesting publications for your scientific activities. The fulltext search of {0} helps you doing so. Beyond that, you can use the search field to filter your post lists by tags, authors and users.</p>\n\n<p>Be inspired by the tag clouds. Click on interesting tags, to filter the post lists for special topics. This way, you can browse through topics easily and find related contents by concept.</p>
 gettingStarted.headline              = Getting started with {0}
@@ -939,7 +939,7 @@ mail.registration.subject            = Your {1} Registration
 
 members = members
 
-meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00fcrzburg and L3S Research Center, Hannover (Germany)
+meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00FCrzburg and L3S Research Center, Hannover (Germany)
 meta.copyright   = KDE/DMIR/L3S, Germany
 meta.description = The blue social bookmark and publication sharing system.
 meta.keywords    = collaborative tagging, publication management, BibTeX, bookmarks, folksonomy, knowledge management
@@ -1036,6 +1036,7 @@ navi.group.settings              = settings
 navi.groups                      = groups
 navi.groups.all                  = all groups
 navi.groups.cap                  = Groups
+navi.groupsettings               = settings
 navi.help                        = help
 navi.helpUrl                     = /help_en
 navi.home                        = home
@@ -1779,9 +1780,12 @@ settings.group.editSettings                      = edit settings
 settings.group.error.addUserToGroupFailed        = The user {0} could not be added to the group {1}.
 settings.group.error.groupDoesNotExist           = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.mandatoryFieldsNotSet       = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
+settings.group.header                            = group settings
+settings.group.homepage                          = homepage
 settings.group.inviteUser.button                 = invite
 settings.group.inviteUser.help                   = the name of the user you want to invite
 settings.group.joinRequest                       = join requests
+settings.group.joinRequests                      = group join requests
 settings.group.login                             = Sorry, you are not logged in with the corresponding group account. Please login as group {0}.
 settings.group.memberList                        = member list
 settings.group.memberList.empty                  = no users in group
@@ -1790,8 +1794,13 @@ settings.group.name                              = name
 settings.group.noGroups                          = You aren't a member of any group.
 settings.group.pendingInvites                    = group invites
 settings.group.pendingInvites.headline           = You are invited to join the following groups
+settings.group.pendingRequests                   = pending requests
+settings.group.profileInfo                       = profile information
+settings.group.realname                          = real group name
 settings.group.remInvite.button                  = dismiss
 settings.group.remInvite.button.title            = dismiss the group invite
+settings.group.removeRequest                     = delete request
+settings.group.removeRequest.title               = remove your join request
 settings.group.reporting                         = publication reporting settings
 settings.group.reporting.address                 = reporting service
 settings.group.reporting.mail                    = mail reporting settings
@@ -1835,7 +1844,7 @@ settings.overwrite.help.browser                  = browser bookmarks overwrite b
 settings.overwrite.help.delicious                = Delicious bookmarks overwrite bookmarks to the same URL in your collection
 settings.password.change.current.error           = Your current password is incorrect.
 settings.password.change.new.error               = Please confirm your new password.
-settings.password.change.success                 = Your password was changed successfully\u044e
+settings.password.change.success                 = Your password was changed successfully\u044E
 settings.password.help.delicious                 = your Delicious password
 settings.passwordwithoutspaces                   = (required :: without spaces)
 settings.picture.current                         = current picture
@@ -2006,7 +2015,7 @@ system.desc                              = The blue social bookmark and publicat
 system.groups                            = You can create a new group within your account settings under the group tab.\r\nA group allows you to get an aggregated view of its member's posts as well as to make some of your own make visible only to its members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
-system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00fcrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
+system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
 system.recent                            = Here you see the latest posts:
 system.recentlyDiscussed.intro.help      = See our help sections on <a href='/help_en/Discussion%20Reviews%20and%20Comments'>discussions</a> and <a href='/help_en/Discussed%20Posts'>discussed post pages</a> to learn more about reviews and comments.
 system.recentlyDiscussed.intro.noUser    = Bookmarks and publications that were recently reviewed or commented.
