added group request page added missing messages adjusted messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -777,6 +777,7 @@ group.cv.publications                                    = Recently added public
 group.cv.title                                           = CV of {0} group
 group.description.help                                   = a short description of the group
 group.doesnotexist.header                                = group does not exist
+group.groupRequest.description                           = TODO: Create information text what happens after this form is sent!
 group.groupRequest.reason                                = reason for request
 group.groupRequest.reason.help                           = the reason why you need the group
 group.groupRequest.userName                              = username
@@ -852,16 +853,17 @@ issues = Report Issues
 
 joinGroup = join group
 
-joinGroup.action               = send request
-joinGroup.already.member.error = You already are a member of this group.
-joinGroup.deny.noUser          = The user you try to deny access does not exist.
-joinGroup.info                 = To join a group you must send a request to the group admin.
-joinGroup.reason               = reason
-joinGroup.reason.hint          = Give a short motivation of why you want to join this group.
-joinGroup.reason.hint.appendix = ({0} characters)
-joinGroup.request.sent.message = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group administrator.
-joinGroup.short                = join
-joinGroup.spammerError         = Joining this group is not possible.
+joinGroup.action                = send request
+joinGroup.already.member.error  = You already are a member of this group.
+joinGroup.already.request.error = You have already sent a group join request.
+joinGroup.deny.noUser           = The user you try to deny access does not exist.
+joinGroup.info                  = To join a group you must send a request to the group admin.
+joinGroup.reason                = reason
+joinGroup.reason.hint           = Give a short motivation of why you want to join this group.
+joinGroup.reason.hint.appendix  = ({0} characters)
+joinGroup.request.sent.message  = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
+joinGroup.short                 = join
+joinGroup.spammerError          = Joining this group is not possible.
 
 last = &rang;&rang;
 
@@ -1031,8 +1033,10 @@ navi.gender                      = gender
 navi.go                          = go
 navi.group                       = group
 navi.group.cap                   = Group
+navi.group.groupRequest          = create new group
 navi.group.hint                  = <group>
 navi.group.settings              = settings
+navi.groupRequest                = group request
 navi.groups                      = groups
 navi.groups.all                  = all groups
 navi.groups.cap                  = Groups
@@ -1795,7 +1799,7 @@ settings.group.noGroups                          = You aren't a member of any gr
 settings.group.pendingInvites                    = group invites
 settings.group.pendingInvites.headline           = You are invited to join the following groups
 settings.group.pendingRequests                   = pending requests
-settings.group.profileInfo                       = profile information
+settings.group.profileInfo                       = TODO
 settings.group.realname                          = real group name
 settings.group.remInvite.button                  = dismiss
 settings.group.remInvite.button.title            = dismiss the group invite
@@ -1807,6 +1811,8 @@ settings.group.reporting.mail                    = mail reporting settings
 settings.group.reporting.update                  = update reporting settings
 settings.group.reqGroup                          = request a new group
 settings.group.reqReason                         = reason for request
+settings.group.requestGroup.description          = A new group can be created on the page <a href="{0}">{1}</a>.
+settings.group.requestGroup.link                 = request new group
 settings.group.settings                          = group settings
 settings.group.sharedDocuments                   = shared documents
 settings.group.sharedDocuments.help              = If activated, group members have access to the documents of other group members.
@@ -1938,7 +1944,7 @@ subtags = subtags
 
 success = success
 
-success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's administrator.
+success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
 
 synchronization.addService                           = add service
 synchronization.autosync                             = automatic synchronization
