--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -767,6 +767,7 @@ group.cv.publications                                    = Die neuesten Publikat
 group.cv.title                                           = Lebenslauf der Gruppe {0}
 group.doesnotexist                                       = 
 group.doesnotexist.header                                = Gruppe existiert nicht
+group.groupRequest.description                           = TODO: Was passiert nachdem dieses Formular abgesendet wurde? Text erstellen!\r\n\r\nEine neue Gruppe kann
 group.memberOf                                           = Mitglied
 group.publicationReportingSettings.externalReportingUrl  = Adresse des externen Meldungsservices
 group.publicationReportingSettings.reportingMailAddress  = E-Mail Adresse
@@ -837,16 +838,17 @@ issues = Probleme melden
 
 joinGroup = Gruppe beitreten
 
-joinGroup.action               = Anfrage senden
-joinGroup.already.member.error = Sie sind bereits ein Mitglied dieser Gruppe.
-joinGroup.deny.noUser          = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
-joinGroup.info                 = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
-joinGroup.reason               = Begr\u00FCndung
-joinGroup.reason.hint          = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
-joinGroup.reason.hint.appendix = ({0} Zeichen)
-joinGroup.request.sent.message = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an den Gruppenadministrator gesendet.
-joinGroup.short                = beitreten
-joinGroup.spammerError         = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
+joinGroup.action                = Anfrage senden
+joinGroup.already.member.error  = Sie sind bereits ein Mitglied dieser Gruppe.
+joinGroup.already.request.error = Sie haben bereits einen Gruppen-Mitgliedsschaftanfrage gesendet. 
+joinGroup.deny.noUser           = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
+joinGroup.info                  = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
+joinGroup.reason                = Begr\u00FCndung
+joinGroup.reason.hint           = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
+joinGroup.reason.hint.appendix  = ({0} Zeichen)
+joinGroup.request.sent.message  = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an die Moderatoren der Gruppe gesendet.
+joinGroup.short                 = beitreten
+joinGroup.spammerError          = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
 
 last = &rang;&rang;
 
@@ -1010,7 +1012,9 @@ navi.gender                      = Geschlecht
 navi.go                          = Los
 navi.group                       = Gruppe
 navi.group.cap                   = Gruppen
+navi.group.groupRequest          = Eine neue Gruppe erstellen
 navi.group.hint                  = <Gruppe>
+navi.groupRequest                = Gruppe erstellen
 navi.groups                      = Gruppen
 navi.groups.all                  = Alle Gruppen
 navi.groups.cap                  = Gruppen
@@ -1802,7 +1806,7 @@ settings.group.noGroups                          = Sie geh\u00F6ren keiner Grupp
 settings.group.pendingInvites                    = Offene Einladungen
 settings.group.pendingInvites.headline           = Sie wurden in folgende Gruppen eingeladen
 settings.group.pendingRequests                   = Offene Anfragen
-settings.group.profileInfo                       = Profil-Information
+settings.group.profileInfo                       = TODO
 settings.group.realname                          = Name der Gruppe
 settings.group.remInvite.button                  = entfernen
 settings.group.remInvite.button.title            = Mitgliedschaftsantrag entfernen
@@ -1814,6 +1818,8 @@ settings.group.reporting.mail                    = E-Mail-Meldungseinstellungen
 settings.group.reporting.update                  = Meldungseinstellungen aktualisieren
 settings.group.reqGroup                          = Eine neue Gruppe beantragen
 settings.group.reqGroup.button                   = beantragen
+settings.group.requestGroup.description          = Eine neue Gruppe kann auf der Seite <a href="{0}">{1}</a> beantragt werden.
+settings.group.requestGroup.link                 = neue Gruppe beantragen
 settings.group.revUser.button                    = ablehnen
 settings.group.revUser.button.title              = Mitgliedschaftsantrag des Benutzers ablehnen
 settings.group.settings                          = Gruppeneinstellungen
@@ -1944,7 +1950,7 @@ subtags = Subtags
 
 success = Erfolg
 
-success.joinGroupRequest.sent = Ihr Wunsch, der Gruppe {0} beizutreten wurde an den Admin dieser Gruppe weitergeleitet.
+success.joinGroupRequest.sent = Ihr Wunsch, der Gruppe {0} beizutreten wurde an die Moderatoren dieser Gruppe weitergeleitet.
 
 synchronization.addService                           = Dienst hinzuf\u00FCgen
 synchronization.autosync                             = Autosynchronization
